--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,23 @@
+# PORTA DO SERVIDOR
 server.port = 8081
+
+# DRIVER UTILIZADO
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+# URL DO BANCO
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_crud?useTimeZone=true&serverTimeZone=UTC
+
+# USUARIO DO BANCO
 spring.datasource.username=root
+
+# SENHA DO BANCO
 spring.datasource.password=
+
+#
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# VERIFICA SE O BANDO JA EXISTE PARA RESETAR (SE NECESSARIO)
 spring.jpa.hibernate.ddl-auto=update
+
+# NAO MOSTRAR A SAIDA SQL NO TERMINAL
 spring.jpq.show-sql=false
