--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8081
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 
 # URL DO BANCO
-spring.datasource.url = jdbc:mysql://localhost:3306/spring_crud?useTimeZone=true&serverTimeZone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_crud?createDatabaseIfNotExist=true&useTimeZone=true&serverTimeZone=UTC
 
 # USUARIO DO BANCO
 spring.datasource.username = root
